Refactor log processing: streamline event log handling and clean up unused code